--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "9d450da2-4789-47a1-9287-5b0d0b8f1ad3"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
